# voxel_engine_tools

./: CMakeLists.txt  README.md
API/: GeneralAPI.cpp  GeneralAPI.h  RegistryAPI.cpp  RegistryAPI.h  UtilsAPI.cpp  UtilsAPI.h  WorldAPI.cpp  WorldAPI.h
Core/: Chunk.cpp  Chunk.h  MeshBuilder.h  Voxel.h  World.cpp  World.h
Core/Utils/: Cordinates.cpp  Cordinates.h
Core/Voxel/: Voxel.h  VoxelDefinition.h  VoxelRegistry.cpp  VoxelRegistry.h
Utils/: MeshBuilder.cpp  MeshBuilder.h  Raycast.cpp  Raycast.h
